hide phone field if no phone is given

--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -16,11 +16,12 @@
             .col-md-9
               =@entry.name
 
-          .row
-            .col-md-3
-              =t('phone') + ':'
-            .col-md-9
-              =@entry.phone
+          -unless @entry.phone.blank?
+            .row
+              .col-md-3
+                =t('phone') + ':'
+              .col-md-9
+                =@entry.phone
 
           .row
             .col-md-3
