--- a/app/views/user_mailer/entry_created.en.text.erb
+++ b/app/views/user_mailer/entry_created.en.text.erb
@@ -14,6 +14,7 @@ Your <%= @entry.entry_type %> has been stored with the following details:
   Number of seats: <%= @entry.seats %>
   Notes: <%= @entry.notes %>
 
+  <%= entry_url(@entry) %>
 
 <% if @entry.is_request? %>
 People who have a ride to offer may now contact you through our web site.
@@ -24,4 +25,3 @@ People looking for a ride may now contact you through our web site.
 If your entry should be removed from our database because it is outdated or no longer neccessary, please click on the following link.
 
 <%= entry_remove_url(@entry, secret: @entry.secret, locale: I18n.locale) %>
-
