--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -65,16 +65,16 @@
 
           .panel-body
             .form-group
-              =label_tag t("simple_form.labels.entry.email"), nil, class: 'control-label'
+              =label_tag :from, t("simple_form.labels.entry.email"), class: 'control-label'
               =text_field_tag :from, nil, class: 'form-control'
 
             - if @entry.entry_type.to_sym == :offer
               .form-group
-                =label_tag t('would_you_drive'), nil, class: 'control-label'
+                =label_tag :would_drive, t('would_you_drive'), class: 'control-label'
                 =check_box_tag :would_drive, nil, class: 'check_box'
 
             .form-group
-              =label_tag t('your_message'), nil, class: 'control-label'
+              =label_tag :text, t('your_message'), class: 'control-label'
               =text_area_tag :text, nil, size: "100x20", class: 'text_field form-control'
 
           .panel-footer
