--- a/app/views/user_mailer/entry_created.en.text.erb
+++ b/app/views/user_mailer/entry_created.en.text.erb
@@ -22,6 +22,6 @@ People who have a ride to offer may now contact you through our web site.
 People looking for a ride may now contact you through our web site.
 <% end %>
 
-If your entry should be removed from our database because it is outdated or no longer neccessary, please click on the following link.
+If your entry should be removed from our database, please click on the following link.
 
 <%= entry_remove_url(@entry, secret: @entry.secret, locale: I18n.locale) %>
